--- a/package.json
+++ b/package.json
@@ -10,43 +10,43 @@
     "type": "git",
     "url": "git@github.com:thanpolas/node-server.git"
   },
+  "dependencies": {
+    "async": "0.2.9",
+    "chai": "1.7.2",
+    "collections": "0.1.24",
+    "config": "0.4.33",
+    "crude": "0.0.13",
+    "express": "3.3.8",
+    "grunt": "0.4.1",
+    "grunt-contrib-copy": "0.4.1",
+    "grunt-contrib-cssmin": "0.7.0",
+    "grunt-contrib-imagemin": "0.1.4",
+    "grunt-contrib-sass": "0.5.0",
+    "grunt-contrib-uglify": "0.2.6",
+    "grunt-contrib-watch": "0.4.4",
+    "grunt-express-server": "0.4.5",
+    "grunt-mocha-test": "0.5.0",
+    "grunt-open": "0.2.2",
+    "grunt-parallel": "0.2.0",
+    "grunt-shell": "0.5.0",
+    "jade": "0.32.0",
+    "lodash": "1.3.1",
+    "logg": "0.2.2",
+    "mantri": "0.2.1",
+    "matchdep": "0.1.2",
+    "middlewarify": "0.0.4",
+    "mocha": "1.12.1",
+    "mongoose": "3.8.0",
+    "node-entity": "0.0.5",
+    "sinon": "1.7.3",
+    "slug": "0.3.4",
+    "socket.io": "0.9.16",
+    "socket.io-client": "0.9.16",
+    "validator": "1.2.2",
+    "when": "2.6.0",
+    "yaml": "0.2.3"
+  },
 
-  "bundledDependencies": [
-    "async",
-    "chai",
-    "collections",
-    "config",
-    "crude",
-    "express",
-    "grunt",
-    "grunt-contrib-copy",
-    "grunt-contrib-cssmin",
-    "grunt-contrib-imagemin",
-    "grunt-contrib-sass",
-    "grunt-contrib-uglify",
-    "grunt-contrib-watch",
-    "grunt-express-server",
-    "grunt-mocha-test",
-    "grunt-open",
-    "grunt-parallel",
-    "grunt-shell",
-    "jade",
-    "lodash",
-    "logg",
-    "mantri",
-    "matchdep",
-    "middlewarify",
-    "mocha",
-    "mongoose",
-    "node-entity",
-    "sinon",
-    "slug",
-    "socket.io",
-    "socket.io-client",
-    "validator",
-    "when",
-    "yaml"
-  ],
   "engines": {
     "node": "0.10.x"
   }
